--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "fralnz.com",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "homepage": "https://fralnz.github.io/",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -28,7 +29,7 @@
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
-    "gh-pages": "^6.2.0",
+    "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
